--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -771,6 +771,24 @@ author = "Leslie Borjas De Xena"
   publisher={Guilford Press}
 }
 
+@inproceedings{siemens2012learning,
+  title={Learning analytics and educational data mining: towards communication and collaboration},
+  author={Siemens, George and d Baker, Ryan SJ},
+  booktitle={Proceedings of the 2nd international conference on learning analytics and knowledge},
+  pages={252--254},
+  year={2012},
+  organization={ACM}
+}
+
+@article{djaouti2011classifying,
+  title={Classifying serious games: the G/P/S model},
+  author={Djaouti, Damien and Alvarez, Julian and Jessel, Jean-Pierre},
+  journal={Handbook of research on improving learning and motivation through educational games: Multidisciplinary approaches},
+  pages={118--136},
+  year={2011},
+  publisher={IGI Global Hershey, PA}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
