--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -377,13 +377,11 @@ Los cuestionarios pueden constar de preguntas abiertas o cerradas. Las preguntas
 
 Los juegos serios (\emph{serious game}) son juegos diseñados para un propósito principal distinto del de la pura diversión~\cite{djaouti2011classifying}. Normalmente, el adjetivo "serio" pretende referirse a productos utilizados por industrias como la de defensa, educación, exploración científica, sanitaria, urgencias, planificación cívica, ingeniería, religión y política~\footnote{http://cs.gmu.edu/~gaia/SeriousGames/index.html}. Los serios juegos son muy utilizados hoy en día en el aula, aunque son más aplicados a competencias específicas que a genéricas. En \cite{guenaga2013serious} se utilizan los juegos serios para el desarrollo de las competencias de \emph{emprendimiento} y \emph{solución de problemas}. Se definieron una serie de indicadores como medida del desempeño en las competencias que permiten al estudiante conocer su nivel de adquisición de las mismas. En \cite{bedek2011behavioral} también se utilizan los juegos serios para el desarrollo y evaluación de competencias genéricas. Se basa en un modelo donde para casa competencia se identifican subcompetencias más específicas, lo que facilita el proceso de definición de indicadores.
 
-\subsubsection{Learning Analytics}
-
 El término \emph{Learning Analytics}, traducido al español como análisis del aprendizaje, es definido por la \emph{Society for Learning Analytics} como la medición, recopilación, análisis y presentación de datos sobre los estudiantes, sus contextos y las interacciones que allí se generan, con el fin de comprender el proceso de aprendizaje que se esta desarrollando y optimizar los entornos en los que se produce~\cite{siemens2012learning}.
 
 En \cite{fidalgo:2015} también abordan el asunto de la evaluación de la competencia de \emph{trabajo en equipo}. Pero en este caso se hace desde un enfoque completamente diferente. En este trabajo se propone utilizar indicadores basados en la interacción entre los agentes que intervienen en el proceso de aprendizaje: Mediante los mensajes escritos en el foro se mide la interacción estudiante-estudiante activo, mientras que mediante las lecturas en el foro se mide las interacciones estudiante-estudiante pasivo. En este trabajo los autores demuestran como estos indicadores estan relacionados con el rendimiento trabajando en equipo de los estudiante. Además, cómo la obtención de estos indicadores mediante los mecanismos de un entorno virtual es un trabajo tedioso y lento, se desarrolló en este mismo trabajo el software \emph{LA system (Learning Analytics system)}.
 
-Trabajos:  En \cite{rayon2014web} trabajan con Pentaho como herramienta de \emph{learning analytics} de soporte para el proceso de evaluación ... (REVISAR).
+En \cite{rayon2014web} se propone la evaluación de varias competencias genéricas mediante indicadores obtenidos del análisis del proceso de aprendizaje (learning analytics). Para ello se crea una plataforma web llamada LACAMOLC (\emph{Learning Analytics for Competence Assessment of MObile Learning Contexts}) que proporciona a profesores y estudiantes un panel donde gestionar las actividades. Mediante LACAMOLC el profesor centraliza todos los indicadores para la evaluación de competencias obteniendo una información cuantitativa y visual. Meidante el número de accesos al foro de Moodle o mediante el número de contribuciones en el foro, se evaluan competencias como la \emph{comunicación interpersonal} o las \emph{habilidades de escritura}. También se utilizan indicadores obtenidos de documentos Google (\emph{Google Docs}).
 
 \section{Respuestas}
 
