empezadas respuestas y correcciones de numeros

--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -146,9 +146,9 @@ En este apartado se clasifican los trabajos según el tipo de contribución que 
 Además de los clasificaciones anteriores, es necesario recoger más información acerca los conceptos que representan la contribución de la investigación. Para ello se recoge información sobre el ámbito de la evaluación de competencias sobre el que se aplica cada contribución. Una vez recogida esta información, se agrupan según sus similitudes, quedando finalmente la siguiente clasificación:
 \begin{itemize}
 \item Evaluación entre iguales y autoevaluación (\emph{peer and self-assessment}): uno de los problemas con los que se encuentran los profesores es la escalabilidad de la tarea de evaluación de competencias cuando el grupo de alumnos es grande. Hay un gran conjunto de trabajos, que aunque se apoyen en la tecnología para realizar alguna actividad, tienen el problema de que la evaluación ha de ser manual. En estos caso, mediante la autoevaluación o evaluación entre iguales los estudiantes se evalúan. De esta manera no sólo descargan de trabajo al profesor haciendo esta evaluación, sino que además se fomenta la capacidad crítica y de análisis del alumno.
-\item Evaluación del profesor (\emph{Teacher assessment}): el profesor evalúa el desempeño de los estudiantes en una o varias competencias genéricas de manera asistida o semi-asistida por el ordenador.
-\item Cuestionarios (\emph{Tests or Questionaries}): en este conjunto de trabajos se mide el desempeño de los estudiantes en las competencias genéricas, generalmente son tests sicológicos orientados a alguna competencia en particular.
-\item Monitorización del aprendizaje (\emph{Learning analytics}): en esta rama, que es la más cercana a la propuesta de esta tesis, se monitoriza el proceso de aprendizaje de los estudiantes con los entornos virtuales para evaluar alguna de sus competencias.
+\item Evaluación del profesor (\emph{teacher assessment}): el profesor evalúa el desempeño de los estudiantes en una o varias competencias genéricas de manera asistida o semi-asistida por el ordenador.
+\item Cuestionarios (\emph{tests or questionaries}): en este conjunto de trabajos se mide el desempeño de los estudiantes en las competencias genéricas, generalmente son tests sicológicos orientados a alguna competencia en particular.
+\item Herramientas de evaluación automática (\emph{automatic assessment tools}): en esta rama se recogen trabajos que automatizan el proceso de evaluación de competencias genéricas.
 
 %\item Resultados de aprendizaje del curso y rúbricas (\emph{CLO and rubrics}): los resultados de aprendizaje del curso se evalúan mediante rúbricas o plantillas de evaluación que miden el rendimiento de los alumnos. Esto proporciona al docente un indicador de sus logros de aprendizaje de cada alumno. Las rúbricas pueden estar o no en soporte informático, pero generalmente no aprovechan la tecnología para automatizar tareas.
 %\item Evaluación entre iguales y autoevaluación (\emph{peer and self eAssessment}): uno de los problemas con los que se encuentran los profesores es la escalabilidad de la tarea de evaluación de competencias cuando el grupo de alumnos es grande. Hay un gran conjunto de trabajos, que aunque se apoyen en la tecnología para realizar alguna actividad, tienen el problema de que la evaluación ha de ser manual. En estos caso, mediante la autoevaluación o evaluación entre iguales los estudiantes se evalúan. De esta manera no sólo descargan de trabajo al profesor haciendo esta evaluación, sino que además se fomenta la capacidad crítica y de análisis del alumno.
@@ -162,7 +162,7 @@ En el siguiente capítulo se mostrarán los resultados obtenidos.
 
 \section{Resultados}
 
-A continuación se muestran los resultados del estudio. Comienza el capítulo con la localización de los estudios primarios, para continuar con la extracción de los datos de estudio, mostrándose varios gráficos y7o tablas que justifican la información mostrada. Finalmente se categorizan los estudios y se muestra el esquema de clasificación resultante.
+A continuación se muestran los resultados del estudio. Comienza el capítulo con la localización de los estudios primarios, para continuar con la extracción de los datos de estudio, mostrándose varios gráficos y/o tablas que justifican la información mostrada. Finalmente se categorizan los estudios y se muestra el esquema de clasificación resultante.
 
 \subsection{Localización de la literatura}
 
@@ -194,7 +194,7 @@ En la tabla \ref{tab:ResumenBusquedaResultados} se muestran las búsquedas reali
 \label{tab:ResumenBusquedaResultados}
 \end{table} 
 
-En total se recopilaron 313 trabajos para ser revisados. El número de estudios primarios resultante (después de aplicar criterios de selección y exclusión) fue de 50 trabajos (casi un 16\% del total de trabajos recopilados). Aunque hay muchos trabajos que tratan las competencias genéricas desde diferentes perspectivas, son muy pocos los que abordan su evaluación con apoyo de tecnología. De ahí estos resultados, cuya primera y optimista interpretación es que pudiera haber un amplio nicho de investigación. Los resultados de esta clasificación pueden verse en la tabla \ref{tab:ResumenSelecccionResultados}.
+En total se recopilaron 313 trabajos para ser revisados. El número de estudios primarios resultante (después de aplicar criterios de selección y exclusión) fue de 49 trabajos (casi un 16\% del total de trabajos recopilados). Aunque hay muchos trabajos que tratan las competencias genéricas desde diferentes perspectivas, son muy pocos los que abordan su evaluación con apoyo de tecnología. De ahí estos resultados, cuya primera y optimista interpretación es que pudiera haber un amplio nicho de investigación. Los resultados de esta clasificación pueden verse en la tabla \ref{tab:ResumenSelecccionResultados}.
 
 \begin{table}
   \begin{center}
@@ -203,9 +203,9 @@ En total se recopilaron 313 trabajos para ser revisados. El número de estudios 
     CRITERIO & TRABAJOS & PORCENTAJE\\
     \hline
     \hline 
-    Included & 50 & 15,97\% \\
+    Included & 49 & 15,65\% \\
     \hline
-    Off Topic & 248 & 79,23\% \\
+    Off Topic & 249 & 79,55\% \\
     \hline
     Unsupported Language & 0 & 0,00\% \\
     \hline
@@ -223,7 +223,7 @@ En total se recopilaron 313 trabajos para ser revisados. El número de estudios 
 
 \subsection{Extracción de los datos}
 
-Aunque hace años desde que las tecnologías entraron a formar parte de la vida académica, no es hasta 2010, con lo que la Comisión Europea llama la tercera generación de herramientas (\emph{Generation 3: continuous integrated assessment}) \cite{Redecker:2013}, cuando se comienzan a integrar la evaluación en las herramientas de aprendizaje, y conceptos como \emph{Data Mining and analysis}, \emph{Behavioural tracking} and \emph{Learning analytics} comienzan a usarse. Tanto en la tabla \ref{tab:ResumenAniosResultados} como en la figura \ref{fig:PublicacionesAnuales} puede verse la distribución de la producción de la selección primaria a lo largo de los años. Casi la mayor parte de los seleccionados se pueden localizar en los últimos años, véase como 37 de estos trabajos (74\%) fue publicado entre 2010 y 2015.
+Aunque hace años desde que las tecnologías entraron a formar parte de la vida académica, no es hasta 2010, con lo que la Comisión Europea llama la tercera generación de herramientas (\emph{Generation 3: continuous integrated assessment}) \cite{Redecker:2013}, cuando se comienzan a integrar la evaluación en las herramientas de aprendizaje, y conceptos como \emph{Data Mining and analysis}, \emph{Behavioural tracking} and \emph{Learning analytics} comienzan a usarse. Tanto en la tabla \ref{tab:ResumenAniosResultados} como en la figura \ref{fig:PublicacionesAnuales} puede verse la distribución de la producción de la selección primaria a lo largo de los años. Casi la mayor parte de los seleccionados se pueden localizar en los últimos años, véase como 37 de estos trabajos (75,51\%) fue publicado entre 2010 y 2015.
 
 \begin{table}
   \begin{center}
@@ -232,33 +232,33 @@ Aunque hace años desde que las tecnologías entraron a formar parte de la vida 
     AÑOS & RESULTADOS & PORCENTAJE\\
     \hline    
     \hline
-    2002 & 1 & 2\% \\
+    2002 & 1 & 2,04\% \\
     \hline
-    2003 & 0 & 0\% \\
+    2003 & 0 & 0,00\% \\
     \hline
-    2004 & 0 & 0\%\\
+    2004 & 0 & 0,00\%\\
     \hline
-    2005 & 1 & 2\%\\
+    2005 & 1 & 4,08\%\\
     \hline
-    2006 & 3 & 6\%\\
+    2006 & 2 & 4,08\%\\
     \hline
-    2007 & 3 & 6\%\\
+    2007 & 3 & 6,12\%\\
     \hline
-    2008 & 3 & 6\%\\
+    2008 & 3 & 6,12\%\\
     \hline
-    2009 & 2 & 4\%\\
+    2009 & 2 & 4,08\%\\
     \hline
-    2010 & 7 & 14\%\\
+    2010 & 7 & 14,29\%\\
     \hline
-    2011 & 10 & 20\%\\
+    2011 & 10 & 20,41\%\\
     \hline
-    2012 & 2 & 4\%\\
+    2012 & 2 & 4,08\%\\
     \hline
-    2013 & 9 & 18\% \\
+    2013 & 9 & 18,37\% \\
     \hline
-    2014 & 5 & 10\%\\
+    2014 & 5 & 10,20\%\\
     \hline
-    2015 & 4 & 8\% \\
+    2015 & 4 & 8,16\% \\
     \hline
   \end{tabular}
 \end{center}
@@ -285,13 +285,13 @@ Una vez revisados todos los artículos, se han extraído unas características o
     CATEGORÍA & TRABAJOS\\
     \hline
     \hline 
-    Peer and self-assessment & 18\\
+    Evaluación entre iguales y autoevaluación & 21\\
     \hline
-    Teacher assessment & 21\\
+    Evaluación del profesor & 22\\
     \hline
-    Questionaries & 16\\
+    Cuestionarios & 14\\
     \hline
-    Learning Analytics & 2\\
+    Herramientas de evaluación automática & 4\\
     \hline
   \end{tabular}
 \end{center}
@@ -307,7 +307,7 @@ Una vez revisados todos los artículos, se han extraído unas características o
 %  \label{fig:PublicacionesForum}
 %\end{figure}
 
-En la figura \ref{fig:Burble} se muestra la clasificación de los trabajos según su ámbito y su tipo (lado izquierdo), y según su ámbito y su contribución (lado derecho). La evaluación de competencias genéricas mediante el uso de las nuevas tecnologías es un tema poco desarrollado. No sólo corroborado porque hay pocos trabajos, si no también a partir de esta figura. La mayoría de los trabajos son propuesta s(\emph{Proposal of solution}), experiencias (\emph{Experience papers}), validaciones (\emph{Validation research}) y evaluaciones de la investigación (\emph{Evaluation research}), mientras que trabajos de opinión(\emph{Opinion papers}) o filosóficos (\emph{Philosophical papers}), trabajos típicos de un tema de investigación de cierta madurez, casi no hay.
+En la figura \ref{fig:Burble} se muestra la clasificación de los trabajos según su ámbito y su tipo (lado izquierdo), y según su ámbito y su contribución (lado derecho). La evaluación de competencias genéricas mediante el uso de las nuevas tecnologías es un tema poco desarrollado. No sólo corroborado porque hay pocos trabajos, si no también a partir de esta figura. La mayoría de los trabajos son propuestas (\emph{Proposal of solution}), experiencias (\emph{Experience papers}), validaciones (\emph{Validation research}) y evaluaciones de la investigación (\emph{Evaluation research}), mientras que trabajos de opinión(\emph{Opinion papers}) o filosóficos (\emph{Philosophical papers}), trabajos típicos de un tema de investigación de cierta madurez, casi no hay.
 
 El tipo de contribución está más distribuído. Las contribuciones del tipo proceso (\emph{Process}) y modelo (\emph{Model}) son las que se dan con más frecuencia, la primera con cuestionarios (\emph{Questionnarie}), evaluación del profesores (\emph{Teacher assessment}) y autoevaluaciones o evaluaciones entre compañeros (\emph{Peer and self-assessment}), mientras que la segunda se da con más frecuencia con cuestionarios y evaluaciones del profesor. 
 
@@ -327,7 +327,7 @@ El tipo de contribución está más distribuído. Las contribuciones del tipo pr
 
 bla bla bla
 
-\subsubsection{Peer and self-assessment}
+\subsubsection{Evaluación entre iguales y autoevaluación (peer and self-assessment)}
 
 La autoevaluación es un proceso en el que los estudiantes evaluan su propio trabajo, mientras que  en el proceso de evaluación entre iguales un estudiante evalúa el trabajo de otro u otros estudiantes. Esta práctica se emplea por un lado para ahorrar tiempo del profesorado, y por otro, para mejorar tanto el conocimiento en la materia del alumnado como sus habilidades metacognitivas. A menudo este tipo de evaluación se acompaña de algun tipo de rúbrica \cite{malehorn1994ten}.
 
@@ -349,7 +349,7 @@ Para conocer el nivel de adquisición de competencias genéricas que poseen los 
 
 
 
-\subsubsection{Teacher assessment}
+\subsubsection{Evaluación del profesor (teacher assessment)}
 
 En muchos casos la evaluación de competencias genéricas se realiza mediante un seguimiento continuo del trabajo del estudiante por parte del profesor. Este proceso es lo que se conoce como \emph{evaluación continua}. Esto permite ir introduciendo mejoras constantes en el proceso de aprendizaje, siendo éste el motivo por el que la evaluación continua se adopta como una estrategia de evaluación formativa más orientada al proceso de aprendizaje que a una valoración puntual. Actualmente, los expertos, influenciados por la \emph{Declaración de Bolonia}, consideran más apropiado desarrollar este tipo de sistemas de evaluación~\cite{garcia2005competencias}. 
 
@@ -359,7 +359,7 @@ En \cite{yang2014fine} se define un modelo de itinerario de aprendizaje que sopo
 
 Uno de los problemas de la no automatización de los procesos de evaluación es la escalabilidad de algunos procesos de evaluación. En \cite{serrano2013hiperion} se diseña \emph{Hiperion}, una sistema de recomendación que ayuda a diseñar actividades adaptadas a cada estudiante para mejorar sus competencias. En el estudio de caso mostrado en este trabajo, los profesores evaluaban las competencias de los estudiantes manualmente y después aplicaban Hiperion. La principal desventaja de la herramienta es el tiempo que el profesor ha de dedicar para asignar los diferentes logros y el peso de cada nota para cada competencia en las actividades. En \cite{ward2011developing} se desarrollan una serie de módulos para Moodle para el desarrollo de competencias empresariales. Los alumnos realizan una serie de actividades para cada módulo y el profesor evalúa mediante conferencia via Skype si cada estudiante sabe lo que ha respondido. En \cite{lacuesta2009active} se utiliza una metodología ABP, dónde se realiza una evaluación individualizada de cada estudiante y de cada grupo de estudiantes. El autor considera que el esfuerzo necesario y carga de trabajo para cada profesor sólo es un poco mayor al habitual. En este trabajo se evaluan competencias como la \emph{capacidad critica}, \emph{trabajo en equipo}, \emph{planificación}, \emph{comunicación}, etc. Para minimizar el esfuerzo están las rúbricas, utilizadas en \cite{casan2015developing}, donde el docente se encarga mediante su uso de la evaluación en las habilidades de \emph{comunicación escrita} del alumnado.
 
-\subsubsection{Questionnarie}
+\subsubsection{Cuestionarios (Questionnaries)}
 
 Algunos de los cuestionarios que se han encontrado dentro de la bibliografia son tests de personalidad. Este tipo de cuestionario está diseñado para revelar aspectos del carácter o mecanismos psicológicos de un individuo. La evaluación de la personalidad se puede ver como la aplicación de procedimientos para medir aspectos de la personalidad de manera que sean aplicables a otros dominios~\cite{wiggins2003paradigms}. Uno de esos dominios es el laboral, sobre todo las entrevistas de trabajo. Es común la necesidad del empresario por conocer la aptitud o no del candidato a un puesto para asumir cierto rol dentro de una empresa. En \cite{andre2011formal} se propone un modelo formal para asignar trabajadores a proyectos software. Para definir el modelo se siguió un método Delphi, donde los expertos definieron criterios para la evaluación de habilidades de trabajo en equipo y definieron un test psicológico. Este modelo se plasmó en un software, que a partir de las respuestas del usuario, le asignaba un rol u otro dentro de los equipos. En \cite{lumsden2005assessment} se muestra la herramienta PQA (Personal Quality Assessment). Esta herramienta de evaluación contiene diversos test para la evaluación de la competencia genérica del \emph{razonamiento} y del {comportamiento ético} en el ámbito médico. En \cite{park2006moral} se muestra VIA-Youth (Values in Action Invetory for Youth) un cuestionario para evaluar la competencia \emph{moral} de los estudiantes a partir de preguntas relacionadas con 24 características de la personalidad. 
 
@@ -373,7 +373,7 @@ Los cuestionarios pueden constar de preguntas abiertas o cerradas. Las preguntas
 
 % JUEGOS SERIOS BASADOS EN INDICADORES: ¿LOS SACO DE LA?
 
-\subsubsection{Herramientas de evaluación automática}
+\subsubsection{Herramientas de evaluación automática (automated assessment tools)}
 
 Los juegos serios (\emph{serious game}) son juegos diseñados para un propósito principal distinto del de la pura diversión~\cite{djaouti2011classifying}. Normalmente, el adjetivo "serio" pretende referirse a productos utilizados por industrias como la de defensa, educación, exploración científica, sanitaria, urgencias, planificación cívica, ingeniería, religión y política~\footnote{http://cs.gmu.edu/~gaia/SeriousGames/index.html}. Los serios juegos son muy utilizados hoy en día en el aula, aunque son más aplicados a competencias específicas que a genéricas. En \cite{guenaga2013serious} se utilizan los juegos serios para el desarrollo de las competencias de \emph{emprendimiento} y \emph{solución de problemas}. Se definieron una serie de indicadores como medida del desempeño en las competencias que permiten al estudiante conocer su nivel de adquisición de las mismas. En \cite{bedek2011behavioral} también se utilizan los juegos serios para el desarrollo y evaluación de competencias genéricas. Se basa en un modelo donde para casa competencia se identifican subcompetencias más específicas, lo que facilita el proceso de definición de indicadores.
 
@@ -385,8 +385,22 @@ En \cite{rayon2014web} se propone la evaluación de varias competencias genéric
 
 \section{Respuestas}
 
+En base al estudio mostrado las respuestas a las preguntas de investigación son las siguientes:
 
-%\chapter{Trabajo en curso y futuro}
+\bigskip
+\textbf{Q1. ¿Qué competencias se han evaluado de forma automática o asistida por ordenador a partir de la actividad de los estudiantes en los entornos virtuales?}
+
+Las competencias que se han evaluado han sido prácticamente todas. Aunque las que más se han evaluado son xxx, yyy y zzz ...
+
+\bigskip
+\textbf{Q2. ¿Qué métodos se utilizan para evaluar competencias genéricas mediante el uso de entornos virtuales?}
+
+Los métodos que más se utilizan son las rubricas electrónicas, utilizadas tanto por el profesor como por el estudiante. Si el profesor se encarga de la rúbrica la carga de trabajo aumenta. Sin embargo, si se delega en la autoevaluación o evaluación entre iguales se pierde objetividad. Además, algunas competencias son difícilmente evaluables por este método. También se encuentra test psicológicos para la evaluación de algunos alumnos, asi como algunos juegos serios.
+
+\bigskip
+\textbf{Q3. ¿Qué técnicas se utilizan para evaluar competencias genéricas a partir de los registros de actividad de un entorno virtual?}
+
+Obtención de indicadores de los procesos de aprendizaje y el uso de estos indicadores para evaluar competencias genéricas.
 
 \section{Conclusiones}
 
